--- a/action.yml
+++ b/action.yml
@@ -1,7 +1,8 @@
 name: 'Variable Extractor'
 description: 'Extract Variable Using Regex'
-icon: x
-color: purple
+branding: 
+  icon: x
+  color: purple
 inputs:
   pattern:  # Regex pattern
     description: 'Pattern used to extract the variable'
