--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Regex Variable Extractor,
+  "name": "Regex Variable Extractor",
   "version": "0.2.1",
   "description": "Github action to extract a variable from a pull request",
   "main": "lib/main.js",
